.deploy/aims-saas-adapter-douglas/service-ssh.yaml
apiVersion: v1
kind: Service
metadata:
  name: aims-client-douglas-ssh
spec:
  type: LoadBalancer
  ports:
    - name: ssh
      protocol: TCP
      port: 8022
      targetPort: 22
