.deploy/aims-saas-adapter-douglas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aims-client-douglas
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
