.deploy/aims-saas-adapter-douglas/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gw
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aims-client
spec:
  hosts:
    - "*"
  gateways:
    - istio-gw
  http:
    - headers:
        request:
          set:
            x-forwarded-proto: https
      match:
        - uri:
            prefix: /douglas/client/pgadmin
      route:
        - destination:
            host: aims-pgadmin-pgadmin4
            port:
              number: 80
    - headers:
        request:
          set:
            x-forwarded-proto: https
      match:
        - uri:
            prefix: /douglas/client
      route:
        - destination:
            host: aims-client-douglas
            port:
              number: 8080
